--- a/VandelayIndustries/war/VandelayIndustries.css
+++ b/VandelayIndustries/war/VandelayIndustries.css
@@ -1,34 +1,33 @@
-/** Add css rules here for your application. */
-
-
-/** Example rules used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+body {
+  padding: 10px;
 }
 
-.sendButton {
-  display: block;
-  font-size: 16pt;
+.tabPanel {
+  display: box;
+  border: 2px blue;
+  padding: 2px;
 }
 
-/** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
+.searchAndDisplayPanel {
+  display: box;
+  border: 2px blue;
+  padding: 2px;
 }
 
-.dialogVPanel {
-  margin: 5px;
+.searchPanel {
+  display: inline;
+  border: 2px blue;
+  padding: 2px;
 }
 
-.serverResponseLabelError {
-  color: red;
+.searchBox {
+  border: 2px blue;
 }
 
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-  margin: 15px 6px 6px;
+.scrollDownBox {
+  border: 1px grey;
+}
+
+.searchButton {
+  width: 50px;
 }
