--- a/VandelayIndustries/war/VandelayIndustries.css
+++ b/VandelayIndustries/war/VandelayIndustries.css
@@ -12,25 +12,30 @@ body {
   display: box;
   border: 2px blue;
   padding: 4px;
+  margin: 10px 0px 15px 0px;
 }
 
 .searchPanel {
   border: 2px blue;
   padding: 4px;
+  margin: 10px 0px 15px 0px;
 }
 
 .searchBox {
   border: 2px blue;
   padding: 8px;
+  margin: 10px 0px 15px 0px;
 }
 
 .scrollDownBox {
   border: 1px grey;
   padding: 8px;
+  margin: 10px 0px 15px 0px;
 }
 
 .searchButton {
 	
   padding: 8px;
   text-align: center;
+  margin: 10px 0px 15px 0px;
 }
